# Diffract-and-conquer-hsi

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: ARCHITECTURE.md
scripts/: simulate_forward.py
src/diffract_conquer_hsi/: __init__.py
src/diffract_conquer_hsi/models/: __init__.py  cmkan_baseline.py  gaussian_primitives.py  ggpir.py
src/diffract_conquer_hsi/optical/: __init__.py  forward_model.py  lens_selection.py  psf.py
src/diffract_conquer_hsi/processing/: __init__.py  config.py  metrics.py
src/diffract_conquer_hsi/training/: evaluate.py  train.py
tests/: test_ggpir_shape.py
