[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diffract-conquer-hsi"
version = "0.1.0"
description = "Snapshot hyperspectral imaging: HDL optical encoding + GGPIR reconstruction (IJCAI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
viz = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
